detectors/prompt-injection/detector_storage.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-storage-guardrail-detectors
spec:
  ports:
    - name: minio-client-port
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: minio-storage-guardrail-detectors
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-storage-guardrail-detectors # <--- change this
labels:
    app: minio-storage-guardrail-detectors # <--- change this to match label on the pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio-storage-guardrail-detectors  # <--- change this to match label on the pod
  template: # => from here down copy and paste the pods metadata: and spec: sections
    metadata:
      labels:
        app: minio-storage-guardrail-detectors
        maistra.io/expose-route: 'true'
      name: minio-storage-guardrail-detectors
    spec:
      volumes:
      - name: model-volume
        persistentVolumeClaim:
          claimName: minio-storage-guardrail-detectors-claim
      containers:
        - args:
            - server
            - /models
          image: quay.io/trustyai/modelmesh-minio-examples:latest
          name: minio
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: "/models/"
              name: model-volume
